web speech api implementada

--- a/02-formacao-aplicacao-web-javascript/04-validacao-reconhecimento-voz/style.css
+++ b/02-formacao-aplicacao-web-javascript/04-validacao-reconhecimento-voz/style.css
@@ -41,3 +41,14 @@ h3 {
     margin: 20px;
 }
 
+[data-btn] {
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    padding: 8px 16px;
+    margin-top: 24px;
+}
+
+[data-btn]:hover {
+    background-color: rgb(200, 200, 200);
+}
