--- a/03-formacao-react-com-javascript/01-react-desenvolvendo-com-javascript/organo/src/components/CampoTexto/CampoTexto.css
+++ b/03-formacao-react-com-javascript/01-react-desenvolvendo-com-javascript/organo/src/components/CampoTexto/CampoTexto.css
@@ -4,8 +4,9 @@
 
 .campo-texto label {
     display: block;
+    font-family: 'Montserrat';
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 600;
     margin-bottom: 8px;
 }
 
