--- a/03-formacao-react-com-javascript/01-react-desenvolvendo-com-javascript/organo/src/components/Formulario/Formulario.css
+++ b/03-formacao-react-com-javascript/01-react-desenvolvendo-com-javascript/organo/src/components/Formulario/Formulario.css
@@ -5,6 +5,7 @@
 }
 
 .formulario form {
+    box-shadow: 0px 4px 4px 0px #00000040;
     background-color: #f2f2f2;
     border-radius: 16px;
     padding: 40px 64px;
