--- a/src/componentes/Botao/botao.css
+++ b/src/componentes/Botao/botao.css
@@ -2,14 +2,15 @@
     background: #6278F7;
     border-radius: 10px;
     font-weight: 700;
-    font-size: 18px;
-    padding: 32px;
+    font-size: 16px;
+    padding: 16px;
     color: #FFF;
     cursor: pointer;
     font-weight: bold;
     border: none;
+    transition: all 150ms ease;
 }
 
 .botao:hover {
-    color: #95FFD4;
+    color: #95cfff;
 }
