--- a/src/componentes/Campo/campo.css
+++ b/src/componentes/Campo/campo.css
@@ -1,20 +1,21 @@
-.campo-texto {
-    margin: 24px 0;
-}
-
-.campo-texto label {
+.campo label {
     display: block;
     margin-bottom: 8px;
-    font-size: 24px;
+    font-size: 16px;
 }
 
-.campo-texto input {
+.campo input {
     background: #FFFFFF;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
     border-radius: 0px;
     width: 100%;
     border: none;
-    font-size: 24px;
-    padding: 24px;
+    font-size: 18px;
+    padding: 16px;
     box-sizing: border-box;
+}
+
+.campo input[type="color"] {
+    padding: 4px;
+    height: 53px;
 }
