--- a/src/componentes/ListaSuspensa/lista-suspensa.css
+++ b/src/componentes/ListaSuspensa/lista-suspensa.css
@@ -1,11 +1,7 @@
-.lista-suspensa {
-    margin: 24px 0;
-}
-
 .lista-suspensa label {
     display: block;
     margin-bottom: 8px;
-    font-size: 24px;
+    font-size: 18px;
 }
 .lista-suspensa select {
     background: #FFFFFF;
@@ -13,7 +9,8 @@
     border-radius: 0px;
     width: 100%;
     border: none;
-    font-size: 24px;
-    padding: 24px;
+    font-size: 18px;
+    padding: 16px;
     box-sizing: border-box;
+    margin-bottom: 16px;
 }
